--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "wouter": "^3.0.1",
     "zod": "^3.22.4"
   },
