--- a/core/package.json
+++ b/core/package.json
@@ -18,12 +18,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "pino": "^8.19.0",
+    "pino-pretty": "^10.3.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.20",
+    "@types/pino": "^7.0.5",
     "nodemon": "^3.1.0",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
