--- a/core/package.json
+++ b/core/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "zod": "^3.22.4"
@@ -27,6 +28,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.20",
     "@types/pino": "^7.0.5",
     "nodemon": "^3.1.0",
