--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@ngneat/elf": "^2.5.1",
     "@tanstack/react-query": "^5.24.8",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
