--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.24.8",
+    "@uiw/react-color-sketch": "^2.1.1",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "emoji-mart": "^5.5.2",
