--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,10 @@
     "@emoji-mart/react": "^1.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.24.8",
+    "@tiptap/extension-document": "^2.3.0",
+    "@tiptap/extension-paragraph": "^2.3.0",
+    "@tiptap/extension-text": "^2.3.0",
+    "@tiptap/react": "^2.3.0",
     "@uiw/react-color-sketch": "^2.1.1",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
